src/App.css
/* @import url("https://fonts.googleapis.com/css2?family=Sansita&display=swap"); */
@import url("https://fonts.googleapis.com/css2?family=Itim&display=swap");
/* @import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap"); */

body {
  /* font-family: 'Sansita', sans-serif; */
  font-family: "Itim", cursive;
  /* font-family: 'Rubik', sans-serif; */
  overflow-x: hidden;
  background: radial-gradient(circle at 10% 20%,
      rgba(216, 241, 230, 0.46) 0.1%,
      rgba(233, 226, 226, 0.28) 90.1%);
}

section {
  padding-top: 30px !important;
}

input,
textarea,
select {
  background: transparent !important;
}

span {
  color: #f53803;
}

/* Remove Google Branding */
#google_translate_element {
  color: transparent;
}

#google_translate_element a {
  display: none;
}

div.goog-te-gadget {
  color: transparent !important;
}

.goog-te-combo {
  border: 2px solid #f53803 !important;
  border-radius: 15px;
  font-size: 20px !important;
  /* margin-top: -0.05px!important; */
  font-family: "Itim", cursive !important;
  color: black;
}

/* @media screen and (max-width: 962px) {
  .goog-te-combo {
    font-size: 20px !important;
  }
} */

/* Calculator */
.calciframe {
  width: 100%;
  height: auto;
  min-height: 60vh;
  border: none;
}

/* Navbar fixes */
.navbar-brand {
  margin-top: -10px;
}

@media screen and (max-width: 962px) {
  .navbar-brand {
    margin-top: 0px;
  }
}

.btngreen {
  background-color: green;
  color: white;
  border: 1px solid green;
  border-radius: 10px;
  padding: 10px;
  margin: 10px;
  width: 100%;
  max-width: fit-content;
  height: auto;
}

.h2bg {
  background: linear-gradient(-225deg, #FF057C 0%, #8D0B93 50%, #321575 100%);
  color: white;
  border-radius: 10px;
  padding: 10px;
  margin: 10px;
  width: 100%;
  max-width: fit-content;
  height: auto;
  text-align: center;
  cursor: default;
}

#btncolourfix button {
  background: linear-gradient(110.7deg, rgb(9, 154, 151) 6.3%, rgb(21, 205, 168) 90.6%);
  color: white;
  border-radius: 10px;
  padding: 10px;
  margin: 10px;
  width: 100%;
  max-width: fit-content;
  height: auto;
  cursor: pointer;
}

/* Main Navbar */
#main-bar {
  font-size: 22px;
}

/* Todos */
#TodoApp .li {
  list-style: none;
  padding: 10px;
  margin-bottom: 10px;
  border: 1px solid #f53803;
  border-radius: 10px;
  color: white;
  font-weight: bold;
}

.licomplete {
  list-style: none;
  padding: 10px;
  margin-bottom: 10px;
  border: 1px solid green;
  border-radius: 10px;
  color: white;
  font-weight: bold;
}

.textcompleted {
  text-decoration: line-through;
  color: green;
}

.text {
  color: #f3482b;
}

#TodoApp input[type="checkbox"] {
  margin-right: 10px;
  float: left;
}

#align-right-btn {
  text-align: right;
}

.todo-input {
  background: transparent;
  border: 1px solid #f53803;
  border-radius: 10px;
  padding: 10px;
  margin: 10px;
  width: 100%;
  max-width: fit-content;
  height: auto;
  min-height: 40px;
}

/* Dashboard Footer */
#DashboardFooter {
  cursor: default;
}

/* Take Notes */
#TakeNotesCss {
  background: linear-gradient(to left bottom, var(--g-color1), var(--g-color2));
  color: white;
  border: 1px solid wheat;
  border-radius: 10px;
  padding: 10px;
  margin: 10px;
  width: 100%;
  height: auto;
}

#TakeNotesCss input,
textarea {
  border-radius: 10px;
  border: 1px solid wheat;
  margin-bottom: 20px;
  width: 100%;
  height: auto;
  min-height: 40px;
}

#TakeNotesCss textarea {
  min-height: 100px;
}

/* Doubt Clearing */
.dcbgcss {
  background: linear-gradient(to left bottom, var(--g-color1), var(--g-color2));
  color: white;
  border-radius: 10px;
  padding: 10px;
  margin: 10px;
  width: 100%;
  height: auto;
}

#privacypolicy {
  text-align: justify;
}

a {
  text-decoration: none;
  color: gray;
}

.dropdown:hover .dropdown-menu {
  display: block;
  margin-top: 0;
}

a:hover {
  text-decoration: none;
  color: gray;
}

/* Extras */
#LargeIcon {
  color: white;
  font-size: 4rem;
  text-align: center;
}

#extras-btn {
  background: linear-gradient(to left bottom, var(--g-color1), var(--g-color2));
  color: white;
  border: 1px solid wheat;
  border-radius: 10px;
  padding: 10px;
  margin: 10px;
  width: 100%;
  max-width: fit-content;
  height: auto;
  min-height: 40px;
}

#extras-btn:hover {
  background: wheat !important;
  color: black;
  /* border: 1px solid #f53803; */
  border-radius: 10px;
  padding: 10px;
  margin: 10px;
  width: 100%;
  max-width: fit-content;
  height: auto;
  min-height: 40px;
}

/* Sidebar Btn For Dashboard */
.sidebarbtn {
  margin: 10px;
  border: 1px solid #f53803;
  background-color: #f53803;
  color: white !important;
  width: 100%;
  max-width: fit-content;
  height: auto;
  min-height: 40px;
  padding: 10px;
  border-radius: 10px;
}

#extras-text {
  color: white;
  text-align: center;
}

#extras-headings {
  text-align: right;
}

/* Font Awesome Icons Styling */
#styleicon {
  /* font-size: 1.5rem; */
  color: #f53803;
}

#styleicon:hover {
  color: white !important;
  text-decoration: none;
}

/* Pricing Table */
.pricing-marquee {
  background-color: #f53803;
  color: white;
  width: 80%;
  padding: 10px;
  border-radius: 10px;
  margin: 10px;
  font-size: 20px;
}

#demo span {
  color: white;
}

.demo {
  background-color: #f5f5f5;
}

.pricingTable {
  color: #3a3a3a;
  text-align: center;
  padding: 0 20px 35px;
  position: relative;
  width: 100%;
  height: auto;
  max-width: 400px;
  z-index: 1;
  /* font-family: 'Sansita', sans-serif; */
}

.pricingTable:before {
  content: "";
  background: #fff;
  border-radius: 30px 0;
  box-shadow: 0 0 15px -5px rgba(0, 0, 0, 0.2);
  position: absolute;
  top: 70px;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
}

.pricingTable .price-value {
  color: #fff;
  height: 150px;
  width: 150px;
  /* padding: 35px 0 0; */
  margin: 0 auto 50px;
  position: relative;
}
/* ... */

